--- a/Style.css
+++ b/Style.css
@@ -3,7 +3,11 @@ body{
     color: lightseagreen;
 }
 
-
+#login{
+    background-color:lightseagreen ;
+    color: white;
+    height: 5vh;
+}
 
 #txt{
     height: 50vh;
@@ -44,4 +48,12 @@ body{
     padding: 3VH;
     border: 2px solid lightseagreen;
     border-radius: 10px;
+}
+
+#trash, #pen{
+   float: left;
+}
+
+#titre {
+    text-align: left;
 }
