--- a/Style.css
+++ b/Style.css
@@ -69,8 +69,31 @@ body{
     text-align: left;
 }
 
+
+
+
 .inputLog, #boutonLog{
     margin-top:1vh;
+    border: 2px solid lightseagreen;
+    border-radius: 10px;
+    height: 5vh;
+    margin-left: 2vw;
+    margin-right: 7vw;
 
 }
+
+#boutonLog {
+    background-color: lightseagreen ;
+    color: white;
+}
+
+#enregistrement{
+    border: 2px solid lightseagreen;
+    border-radius: 10px;
+    width: 40vw;
+    margin-top: 30vh;
+    margin-left: 30vw;
+    padding: 5vh;
+}
+
 
